k8s/apps/example-app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: example-app
  namespace: default
  labels:
    app: example-app
spec:
  type: ClusterIP
  ports:
  - name: proxy
    port: 4180
    targetPort: 4180
    protocol: TCP
  selector:
    app: example-app
