k8s/apps/example-app/virtualservice-auth.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: auth-cat-herding
  namespace: default
  labels:
    app: example-app
    app.kubernetes.io/component: authentication
spec:
  hosts:
  - "auth.cat-herding.net"
  gateways:
  - aks-istio-ingress/cat-herding-gateway
  http:
  - match:
    - uri:
        prefix: /oauth2/
    route:
    - destination:
        host: example-app.default.svc.cluster.local
        port:
          number: 4180
    timeout: 10s
    retries:
      attempts: 3
      perTryTimeout: 3s
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: example-app.default.svc.cluster.local
        port:
          number: 4180
