k8s/apps/example-app/virtualservice.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: example-app
  namespace: default
  labels:
    app: example-app
spec:
  hosts:
  - "example-app.cat-herding.net"
  gateways:
  - aks-istio-ingress/cat-herding-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: example-app.default.svc.cluster.local
        port:
          number: 4180
